# JauapAI_RAG_system

./: DEPLOYMENT.md  Dockerfile  Dockerfile.telegram  FIXES_APPLIED.md  Golden_dataset.md  Llama_parse_script.py  START_SERVER.md  TELEGRAM_BOT_DEPLOYMENT.md  TESTING_GUIDE.md  Unstructured_parser.ipynb  book_ocr.py  copy_text.ipynb  docker-compose.yml  full_markdown.md  llama_parse.ipynb  main.py  pipeline_pdf_extract.py  pyproject.toml  railway.telegram.json  redis_test.py  requirements-telegram.txt  requirements.txt
Backend/: SETUP.md  config.py  database.py  main.py  requirements.txt
Backend/Chat/: chat_service.py
Backend/alembic/: env.py
Backend/app/: main.py
Backend/app/core/: config.py  dependencies.py  middleware.py  security.py
Backend/app/db/: database.py  supabase.py
Backend/app/models/: chat.py  payment.py  user.py  vote.py
Backend/app/schemas/: auth.py  chat.py
Backend/app/services/: email_service.py  rag_service.py  telegram_bot.py  user_service.py
Backend/auth/: schemas.py  security.py
Backend/middleware/: rate_limit.py
Backend/models/: __init__.py  conversation.py  message.py  message_usage.py  user.py
Backend/routes/: auth.py  chat.py  subscription.py
Backend/services/: history_service.py  message_service.py
Backend/tests/: conftest.py  test_auth.py  test_conversations.py  test_subscription.py
Frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/public/: robots.txt  sitemap.xml
Frontend/src/: App.tsx  index.css  translations.ts
Frontend/src/components/: Benchmarks.tsx  CTASection.tsx  CoreFeatures.tsx  FeatureCards.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  LanguageSwitcher.tsx  ProtectedRoute.tsx  SubscribeButton.tsx  Testimonials.tsx  (+1 more)
Research/: Aisha_base_anki.ipynb  ChromaDB_test.ipynb  Llama_parse_script.py  Qdrant_test.ipynb  copy_text.py  langchain-multimodal.ipynb  langchain_agents_test.ipynb  llama_parse.ipynb  pipeline_pdf_extract.py  pyproject.toml
data/: Anki_5.1-апта-авторлық-база-джениус-гео.txt  Anki_final_cards.txt  Anki_parsed_with_aisa.txt  Parsed_Kazakh_history_6.md  Parsed_Kazakh_history_6_sample.md  Parsed_Kazakhstan_tarihi_10_mektep_sample.md  Parsed_Kazakhstan_tarihi_11_atamura_1_sample.md  Parsed_Kazakhstan_tarihi_11_atamura_2_sample.md  Parsed_Kazakhstan_tarihi_7_atamura.md  Parsed_Kazakhstan_tarihi_7_atamura_sample.md  Parsed_Kazakhstan_tarihi_7_mektep.md  Parsed_Kazakhstan_tarihi_7_mektep_sample.md  Parsed_Kazakhstan_tarihi_8_atamura_sample.md  Parsed_Kazakhstan_tarihi_8_mektep_sample.md  Parsed_Kazakhstan_tarihi_9_atamura_sample.md  Parsed_Kazakhstan_tarihi_9_mektep_sample.md  Parsed_kazakhstan_tarihi_8_atamura.md  Parsed_kazakhstan_tarihi_8_mektep.md  Parsed_kazakhstan_tarihi_9_atamura.md  Parsed_kazakhstan_tarihi_9_mektep.md  book_text.txt  book_text_extracted.txt  book_text_sample.txt  extracted.txt
parent_documents_store/: 000a6172-a730-4d1e-bd73-f08b7d3c64e9  0021b171-be82-4bac-9cc7-4b8e954ae2ab  0052ad7f-3684-445c-93b4-afa8b47b4e9c  00646758-932c-4fa7-ae3a-fb5965d4ea76  00ae4f18-3157-45c0-a670-1fbea902a0b4  015dd75f-b1c3-4b34-88be-ad34fc313949  016927ef-551d-4bc6-a040-ee41d023700c  01719586-cf48-4514-8b15-22ea0bf77c6d  0171ec1b-5b81-4b53-828b-6b13590cfdc1  01a8aca0-9f60-42ca-afed-62fc07fe7626  0285d6d8-66c7-40e3-b03e-f17b51137617  02ac6554-9df6-4588-a69b-f40c86c14e4a  02c9ec0e-f1cd-4f9f-9e4f-e75a827a601e  02d3095e-d109-4b49-9b70-7e721e807a6a  03de0546-24fb-4718-a66a-d5051a913533  045e4064-1d5a-4020-beac-7a600e5eb109  04667b40-c241-4dce-82b8-d1fe9405c742  04cafebb-82f4-449b-b0cf-b30c5ba4a5de  04d0997a-a4ec-4c8e-a2af-a59f047fd16d  04e554e4-f9a3-4d58-867a-533d848733c6  053210da-2a6e-4313-babc-b053a47dc7fa  055378d0-c5cc-4b80-8501-5547ad4cf672  055b520c-63c0-46fc-ab76-d5a6b98040ce  059f6c10-6254-4f47-a70a-b393944bbf88  05fa9077-06ed-4d22-9dc8-8d20a93da2b3  061cf89d-8373-4c59-9847-f7941552b584  062ae361-9b2e-4e3e-b618-e48ad9cb815c  0660731b-8279-4b68-9f9b-9544b5ab5330  06738098-4e9b-47b4-927a-8937835573e1  0696324c-3cd1-4947-81f1-664136b2d9c4  06b6f07b-b180-4f15-a887-1aba77b3dfc4  06bbdf33-f77d-4daf-9119-e5b5c85e1766  06d7f603-ea47-4a50-9e39-ce42fa5fc901  076f938d-cf14-45a4-8c3f-1d584606e2ca  0777b0d1-b981-4d46-8002-aa7602432cbd  079d1118-192e-4fa6-8e48-633941d62305  07c300ec-4407-4411-a5ac-1ece984cb15f  07f337e1-bf7d-4203-96f8-59bde2725b17  080b9967-5d45-41a1-9b4c-4fb286d48844  0881d27f-b780-4980-b9ff-89cc8d8aa733  (+1145 more)
redis_data/: Pheonix.ipynb
redis_data/appendonlydir/: appendonly.aof.1.base.rdb
(+30 files in other folders)
