[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.1",
    "fastapi>=0.109.0",
    "gunicorn>=21.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.19",
    "langchain-openai>=0.0.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.7",
    "sqlalchemy>=2.0.25",
    "supabase>=2.3.0",
    "uvicorn>=0.27.0",
    "qdrant-client>=1.7.0",
    "langchain-google-genai>=0.0.6",
    "langchain-voyageai>=0.1.0",
    "voyageai>=0.1.3",
    "llama-parse>=0.1.0",
    "FlagEmbedding>=1.2.8",
    "email-validator>=2.3.0",
]
